feat: add licences stats api
